--- a/react-gakusyuu/index.html
+++ b/react-gakusyuu/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="stylesheet.css">
   <title>Document</title>
 </head>
 <body>
-  <script src="./script.js"></script>
+  <div id="root"></div>
+  <script src="./src/index.js"></script>
 </body>
 </html>
