6/6の学習内容

--- a/6-04～6-09/DOM/index.html
+++ b/6-04～6-09/DOM/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-  <script src="./js/script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <img
+      class="fice"
+      src="https://api.adorable.io/avatars/285/abott@adorable.png"
+      alt="fice"
+    />
+    <script src="./js/script.js">
+      const nameList = [
+          "akira mukai",
+          "sadaharu tanaka",
+          "mayu kosugi",
+          "kyouko koike",
+          "kazuha terada",
+        ];
+
+        const profiles = [
+        {
+          name: "akira mukai",
+          phoneNumber: 09055345359,
+          sex: "女性",
+          address: "tokyo",
+        },
+        {
+          name: "akira mukai",
+          phoneNumber: 09055345359,
+          sex: "女性",
+          address: "tokyo",
+        },
+      ];
+    </script>
+  </body>
 </html>
