6/11の学習内容

--- a/6-10~6-19/Ajax/index.html
+++ b/6-10~6-19/Ajax/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
   <div id = "root"></div>
+  <span class ="weatherCord">
+    <h2 class="week">Thursday</h2>  <!-- 曜日 -->
+    <p class="time">Mach 1st 1:00 pm</p><!-- 日時 -->
+    <img src="http://openweathermap.org/img/wn/04n@2x.png" alt="icon"><!-- アイコン -->
+    <h1>25℃</h1><!-- 温度 -->
+    <p>broken clouds</p><!-- 天気 -->
+  </span>
   <script src = "./src/script.js"></script>
 </body>
 </html>
